# EMplanner

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  lowBound.txt  uppperBound.txt
data/: lowBound.txt  obstacles.txt  uppperBound.txt  vehicle.txt  waypoints.txt
include/: frenetUtils.h  matplotlibcpp.h  osqpSolver.h  server_config.h  smoothSolver.h  visualization.h
lib/: frenetUtils.cpp  osqpSolver.cpp  server_config.cpp  smoothSolver.cpp  visualization.cpp
src/: main.cpp
